added navbar color changes

--- a/buyers.html
+++ b/buyers.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <ul class="menu">
-      <li class="menuItem" style="background-color: black;"><a class="menuItemLink" href="index.html">Home</a></li>
+      <li class="menuItem"><a class="menuItemLink" href="index.html">Home</a></li>
       <li class="menuItem"><a class="menuItemLink" href="listings.html">Listings</a></li>
       <li class="menuItem"><a class="menuItemLink" href="realtors.html">Realtors</a></li>
-      <li class="menuItem"><a class="menuItemLink" href="buyers.html">Buyers</a></li>
+      <li class="menuItemactive"><a class="menuItemLink" href="buyers.html">Buyers</a></li>
       <li class="menuItem"><a class="menuItemLink" href="sellers.html">Sellers</a></li>
       <li class="menuItem"><a class="menuItemLink" href="realtors-buyers.html">Realtors-Buyers</a></li>
     </ul>
