--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body>
     <ul class="menu">
-      <li class="menuItem" style="background-color: black;"><a class="menuItemLink" href="index.html">Home</a></li>
-      <li class="menuItem"><a class="menuItemLink" href="listings.html">View Listings</a></li>
-      <li class="menuItem"><a class="menuItemLink" href="realtors.html">View Realtors</a></li>
-      <li class="menuItem"><a class="menuItemLink" href="buyers.html">View Buyers</a></li>
-      <li class="menuItem"><a class="menuItemLink" href="sellers.html">View Sellers</a></li>
-      <li class="menuItem"><a class="menuItemLink" href="realtors-buyers.html">View Realtors-Buyers</a></li>
+      <li class="menuItemactive"><a class="menuItemLink" href="index.html">Home</a></li>
+      <li class="menuItem"><a class="menuItemLink" href="listings.html">Listings</a></li>
+      <li class="menuItem"><a class="menuItemLink" href="realtors.html">Realtors</a></li>
+      <li class="menuItem"><a class="menuItemLink" href="buyers.html">Buyers</a></li>
+      <li class="menuItem"><a class="menuItemLink" href="sellers.html">Sellers</a></li>
+      <li class="menuItem"><a class="menuItemLink" href="realtors-buyers.html">Realtors-Buyers</a></li>
     </ul>
     <div class="header">
       <h1>Strickland Realty</h1>
