added navbar color changes

--- a/buyers.html
+++ b/buyers.html
@@ -38,7 +38,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td><button type="button">Delete Buyer</button></td>
+            <td><button class="btn2" type="button">Delete Buyer</button></td>
           </tr>
         </tbody>
       </table>
@@ -69,7 +69,7 @@
             </label>
           </p>
           <p>
-            <button type="button">Add Buyer</button>
+            <button class="btn" type="button">Add Buyer</button>
           </p>
         </fieldset>
       </form>
@@ -84,7 +84,6 @@
               Buyer ID:
               <input type="number" name="id_update" size="5" maxlength="5">
             </label>
-            <button type="button">Go!</button>
           </p>
           <p>
             <label>
@@ -107,7 +106,8 @@
             </label>
           </p>
           <p>
-            <button type="button">Update Buyer</button>
+            <button class="btn" type="button">Find Buyer</button>
+            <button class="btn" type="button">Update Buyer</button>
           </p>
         </fieldset>
       </form>
