--- a/listings.html
+++ b/listings.html
@@ -64,7 +64,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td><button type="button">Delete Listing</button></td>
+            <td><button class="btn2" type="button">Delete Listing</button></td>
           </tr>
         </tbody>
       </table>
@@ -175,7 +175,7 @@
             </label>
           </p>
           <p>
-            <button type="button">Add Listing</button>
+            <button class="btn" type="button">Add Listing</button>
           </p>
         </fieldset>
       </form>
@@ -190,7 +190,6 @@
               Listing ID:
               <input type="number" name="id_update" size="5" maxlength="5">
             </label>
-            <button type="button">Go!</button>
           </p>
           <p>
             <label>
@@ -293,7 +292,8 @@
             </label>
           </p>
           <p>
-            <button type="button">Update Listing</button>
+            <button class="btn" type="button">Find Listing</button>
+            <button class="btn" type="button">Update Listing</button>
           </p>
         </fieldset>
       </form>
