--- a/realtors-buyers.html
+++ b/realtors-buyers.html
@@ -32,7 +32,7 @@
           <tr>
             <td></td>
             <td></td>
-            <td><button type="button">Delete Relationship</button></td>
+            <td><button class="btn" type="button">Delete Relationship</button></td>
           </tr>
         </tbody>
       </table>
@@ -64,6 +64,36 @@
           </p>
           <p>
             <button type="button">Add Relationship</button>
+          </p>
+        </fieldset>
+      </form>
+      <br><br>
+      <form>
+        <fieldset>
+          <legend>Update Realtor-Buyer Relationship</legend>
+          <p>
+            <label>
+              Realtor First Name:
+              <input type="text" name="realtor_fname_input" size="20" maxlength="100">
+            </label>
+            <label>
+              Realtor Last Name:
+              <input type="text" name="realtor_lname_input" size="20" maxlength="100">
+            </label>
+          </p>
+          <p>
+            <label>
+              Buyer First Name:
+              <input type="text" name="buyer_fname_input" size="20" maxlength="100">
+            </label>
+            <label>
+              Buyer Last Name:
+              <input type="text" name="buyer_lname_input" size="20" maxlength="100">
+            </label>
+          </p>
+          <p>
+            <button class="btn" type="button">Find Relationship</button>
+            <button class="btn" type="button">Update Relationship</button>
           </p>
         </fieldset>
       </form>
