--- a/sellers.html
+++ b/sellers.html
@@ -40,7 +40,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td><button type="button">Delete Seller</button></td>
+            <td><button class="btn2" type="button">Delete Seller</button></td>
           </tr>
         </tbody>
       </table>
@@ -81,7 +81,7 @@
             </label>
           </p>
           <p>
-            <button type="button">Add Seller</button>
+            <button class="btn" type="button">Add Seller</button>
           </p>
         </fieldset>
       </form>
@@ -96,7 +96,6 @@
               Seller ID:
               <input type="number" name="id_update" size="5" maxlength="5">
             </label>
-            <button type="button">Go!</button>
           </p>
           <p>
             <label>
@@ -107,6 +106,7 @@
               Last Name:
               <input type="text" name="lname_update" size="30" maxlength="100">
             </label>
+            
           </p>
           <p>
             <label>
@@ -129,7 +129,8 @@
             </label>
           </p>
           <p>
-            <button type="button">Update Seller</button>
+            <button class="btn" type="button">Find Seller</button>
+            <button class="btn" type="button">Update Seller</button>
           </p>
         </fieldset>
       </form>
