Updated delete button to match style of other pages

--- a/realtors-buyers.html
+++ b/realtors-buyers.html
@@ -32,7 +32,7 @@
           <tr>
             <td></td>
             <td></td>
-            <td><button class="btn" type="button">Delete Relationship</button></td>
+            <td><button class="btn2" type="button">Delete Relationship</button></td>
           </tr>
         </tbody>
       </table>
